tests/pass/closure_call.us
fn main() {

}

fn foo() -> fn(i32) -> i32 {
    let v = 10;
    let a = |x:i32| {
        v = v+10;
        return 10;
    };

    return a;
}