tests/fail/resolver.us
type char = u8;

struct List {
    head:i32,
    body:nil
}
struct List2 {
    head:i32,
    body:nil
}

fn main() -> List {
    let list = List {
        head:10,
        body:nil
    } ;

    return list;
}

fn main() -> List {
    let list = List {
        head:10,
        body:nil
    } ;

    return list;
}



// Expect: error: `main` is defined twice